# tinty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSES-THIRD-PARTY.md  Makefile  README.md  RELEASE.md  THIRD_PARTY_LICENSES.md  USAGE.md  about.hbs  about.toml  clippy.toml  config.schema.json  deny.toml  example.toml  flake.nix  justfile  license.html  profile_helper.fish
.cargo/: audit.toml
.github/: CODEOWNERS  auto_assign-issues.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-assign-issues.yml  ci.yml  create-release-commit.yml  create-release-git-tag.yml  lint.yml  msrv.yml  publish-crate.yml  release-commit.yml  release.yml  setup-environment.yml  tag-release.yml  test.yml  update-flake-binaries.yml  update-test-fixtures.yml
contrib/completion/: README.md  tinty.bash  tinty.elvish  tinty.fish  tinty.powershell  tinty.ps1  tinty.zsh
fixtures/: .gruvbox-material-dark-hard.json.swp  base16-dracula.json  github.json  gruvbox-material-dark-hard.json  schemes.txt  tinted8-catppuccin-mocha.json  tinty-city-dark.json  tinty-city-dark.yaml
hooks/: base16-delta.sh  base16-hexchat.sh  base16-sublime-merge.sh  base16-tmux.sh  base16-vim.sh
nix/: home-manager.nix  package.nix
nix/modules/home/tinty/: core.nix  delta.nix  fzf.nix  shell.nix  terminal.nix  tmux.nix
public/: schemes.txt
schemas/: config.schema.json
scripts/: create_fixtures  create_release_changes  package_build  setup  update_nix_flake
src/: cli.rs  commands.rs  config.rs  constants.rs  main.rs  paths.rs  repo.rs  scheme_repos.rs  utils.rs
src/git/: cli.rs  mod.rs
src/hooks/: base16_shell.rs  base16_shell_manager.rs  base16_tmux.rs  mod.rs  setup.rs  update.rs  utils.rs
src/operations/: apply.rs  build.rs  config.rs  current.rs  cycle.rs  gallery.rs  generate_scheme.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  set.rs  setup.rs  studio.rs  sync.rs  update.rs
src/operations/gallery/: gallery.css  gallery.js  index.html  server.rs
src/operations/gallery/snippets/: diff.html  elixir.html  haskell.html  kotlin.html  lisp.html  rust.html  terminal.html
src/operations/studio/: index.html  studio.css  studio.js
src/repo/: git_shell.rs  gix.rs  mod.rs
tests/: cli_apply_subcommand_tests.rs  cli_apply_write_to_file_tests.rs  cli_build_subcommand_tests.rs  cli_config_subcommand_tests.rs  cli_current_subcommand_tests.rs  cli_cycle_subcommand_tests.rs  cli_gallery_subcommand_tests.rs  cli_general_tests.rs  cli_generatecompletion_subcommand_tests.rs  cli_generatescheme_subcommand_tests.rs  cli_info_subcommand_tests.rs  cli_init_subcommand_tests.rs  cli_install_subcommand_tests.rs  cli_integration_test.rs  cli_list_subcommand_tests.rs  cli_scheme_extras_tests.rs  cli_schemes_repo_tests.rs  cli_set_subcommand_tests.rs  cli_setup_subcommand_tests.rs  cli_studio_subcommand_tests.rs  cli_sync_subcommand_tests.rs  cli_update_allow_dirty_tests.rs  cli_update_subcommand_tests.rs  utils.rs
tests/common/: mod.rs
tests/fixtures/schemes/: tinty-generated.yaml
tests/home-manager/: flake.nix
