[package]
name = "tinty"
description = "Change the theme of your terminal, text editor and anything else with one command!"
version = "0.29.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Jamy Golden <code@jamygolden.com>", "Tinted Theming <tintedtheming@proton.me>"]
homepage = "https://github.com/tinted-theming/tinty"
repository = "https://github.com/tinted-theming/tinty"
keywords = ["cli", "base16", "shell", "tinted-theming", "theme"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = { version = "4.5.40" }
hex_color = "3.0.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.135"
shell-words = "1.1.0"
strip-ansi-escapes = "0.2.0"
tinted-builder-rust = "0.13.1"
tinted-builder = "0.9.1"
tinted-scheme-extractor = "0.6.1"
toml = "0.8.19"
url = "2.5.4"
xdg = "2.5.2"
home = "0.5.11"
rand = "0.8.5"
regex = "1.7"
rayon = "1.10"
tempfile = "=3.6.0"
